[tool.poetry]
name = "avplib"
version = "1.5.0.post1"
description = "AVP - ASCII Video Player. Allows you to play any video as ASCII-art."
authors = ["Romanin <semina054@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/romanin-rf/avplib"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = ">=1.25"
soundfile = ">=0.12.1"
opencv-python = ">=4.8"
pillow = ">=10"
pygame = ">=2.5"
fpstimer = "0.0.1"
ffmpeg = ">=1.4"
moviepy = ">=1"
rich = ">=13.5"
click = ">=8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
